syntax = "proto3";

package proto;

option go_package = "github.com/eduardoths/tcc-raft/proto";

service Raft {
    rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
    rpc Heartbeat(HeartbeatArgs) returns (HeartbeatReply);
    rpc SearchLog(SearchLogArgs) returns (SearchLogReply);
}

message HeartbeatArgs {
    int32 term = 1;
    string leaderId = 2;
    int32 prevLogIndex = 3;
    int32 prevLogTerm = 4;
    repeated LogEntry entries = 5;
    int32 leaderCommit = 6;
}

message HeartbeatReply {
    bool success = 1;
    int32 term = 2;
    int32 nextIndex = 3;
}

message RequestVoteArgs {
    int32 term = 1;
    string candidateId = 2;
}

message RequestVoteReply {
    int32 term = 1;
    bool voteGranted = 2;
}

message LogEntry {
    int32 term = 1;
    int32 index = 2;
    LogCMD command = 3;
}

message LogCMD {
    string operation = 1;
    string key = 2;
    bytes value = 3;
}

message SearchLogArgs {
    int32 index = 1;
}

message SearchLogReply {
    LogCMD command = 1;
    bool found = 2;
    bool commited = 3;
}